# clogger

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  exc.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml  msbuild.yml
.gitlab/issue_templates/: Bug.md  Feature.md
docs/res/: doxygen-awesome.css
docs/source/: conf.py
include/: ansi.h  clog.h  clogger.h  clogger_pch.c  clogger_pch.h  console.h
include/clogger/: clog.h  clog_assert.h  clogger.h  console.h  core.h
src/: CMakeLists.txt  ansi.h  clog.c  clog.h  clog_assert.c  clogger.c  clogger_pch.h  console.c
src/clogger/: clog.c  clog.h  clog_assert.c  clog_assert.h  clog_expect.c  clog_expect.h  clogger.c  clogger.h  console.c  console.h  core.h
tests/: CMakeLists.txt  clog_message.c  clog_test.c
tests/clog/: clog_critical.c  clog_debug.c  clog_error.c  clog_fatal.c  clog_info.c  clog_message.c  clog_to_file_false.c  clog_to_file_true.c  clog_warning.c
tests/unit-test/: expected_behaviours.c  expected_behaviours.h
