project(clogger_test LANGUAGES C)

add_executable(test_clog_message clog/clog_message.c)
add_executable(test_clog_info clog/clog_info.c)
add_executable(test_clog_debug clog/clog_debug.c)
add_executable(test_clog_warning clog/clog_warning.c)
add_executable(test_clog_error clog/clog_error.c)
add_executable(test_clog_fatal clog/clog_fatal.c)
add_executable(test_clog_to_file_true clog/clog_to_file_true.c)
add_executable(test_clog_to_file_false clog/clog_to_file_false.c)

target_link_libraries(test_clog_message clogger)
target_link_libraries(test_clog_info clogger)
target_link_libraries(test_clog_debug clogger)
target_link_libraries(test_clog_warning clogger)
target_link_libraries(test_clog_error clogger)
target_link_libraries(test_clog_fatal clogger)
target_link_libraries(test_clog_to_file_true clogger)
target_link_libraries(test_clog_to_file_false clogger)
